--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^10.17.9",
+    "jotai": "^2.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
