--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-router-dom": "^6.21.2",
     "yup": "^1.3.3"
   },
   "devDependencies": {
