--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -6,7 +6,7 @@ server {
     location / {
         root /var/www/html;
         index index.html index.htm;
-        try_files $uri $uri/=404;
+        try_files $uri /index.html;
         error_page 404 /index.html;
     }
 }
