--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,25 +1,12 @@
+# File ./nginx.conf
 server {
     listen 3000;
-    server_name localhost;  # Replace with your domain or IP
-
-    # Serve the index file by default
-    index index.html;
+    server_name localhost;
 
     location / {
+        root /var/www/html;
+        index index.html index.htm;
         try_files $uri /index.html;
+        error_page 404 /index.html;
     }
-
-    # Optional: Serve static files with caching
-    location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|otf|eot)$ {
-        try_files $uri =404;
-        expires 30d;
-        access_log off;
-    }
-
-    error_page 404 /index.html;
-
-    # Additional headers for security
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header X-Content-Type-Options "nosniff" always;
 }
